logs/m3core.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/m3'...
Compiling './lib/python3.5/site-packages/m3/component.py'...
***   File "./lib/python3.5/site-packages/m3/component.py", line 55
    print 'Saving...',self.config_name
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/m3/component_factory.py'...
***   File "./lib/python3.5/site-packages/m3/component_factory.py", line 40
    print 'Executing factory_py_libs:',k
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/m3/eeprom.py'...
***   File "./lib/python3.5/site-packages/m3/eeprom.py", line 43
    print 'Writing EEPROM ',out_filename
                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/m3/gui.py'...
***   File "./lib/python3.5/site-packages/m3/gui.py", line 165
    print 'Closing M3 Gui'
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/m3/m3rt_toolbox.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (m3rt_toolbox.py, line 69)
Compiling './lib/python3.5/site-packages/m3/rt_proxy.py'...
***   File "./lib/python3.5/site-packages/m3/rt_proxy.py", line 66
    if self.verbose: print 'Starting M3 RPC Client at ',self.host, 'on Port ',self.rpc_port,'...'
                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/m3/toolbox_core.py'...
***   File "./lib/python3.5/site-packages/m3/toolbox_core.py", line 61
    print m
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/m3/widgets.py'...
***   File "./lib/python3.5/site-packages/m3/widgets.py", line 262
    print 'Type Error: M3GuiTreeModel'
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/m3core-1.9.1.egg-info'...
Listing './lib/python3.5/site-packages/m3rt'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
